# NeuraNFT_Near

./: .gitignore  LICENSE  README.md  docker-compose-copy-copy.yml  docker-compose-debug.yml  docker-compose-deployment.yml  docker-compose-local-debug.yml  docker-compose.yml
frontend/: .dockerignore  .env  .gitignore  Dockerfile  config-overrides.js  endpoints.json  package-lock.json  package.json
frontend/nginx_config/: custom-nginx.conf  default.conf  goaccess.conf  nginx.conf  nginx.config  real-ip.conf
frontend/public/: index.html
frontend/src/: App.jsx  AppContext.js  WalletContext.js  endpoints.json
hpc_node/: Dockerfile  Dockerfile.rag  README.md  docker-compose.yaml  embeddings.ipynb  main.py  req.txt  requirements.txt  start.sh
localnode/: LocalNodeDocker.md  LocalNodeJavaSetup.md  TronQuickStart.md
localnode/____tron-node-custom-docker copy/: Dockerfile  private_net_config.conf  start_tron.sh
master_node/: .env  .gitignore  Dockerfile  README.md  app.py  requirement.txt
node_scripts/: .env  .env_copy  dockerfile  package-lock.json  package.json  readme.md
smart_contracts/: 00_index.md  01_overview.md  02_01_rust_near.md  02_02_near_js.md  02_02_rust_js.md  02_compiling_smart_contracts.md  03_build_and_testing.md  03_migration.md  04_testing_on_cli.md  04_testnet_deployment.md  05_code_testing.md  06_build_data_use_in_react_webapp.md  07_build_data_use_in_python_code.md  08_example.md  Neura NFT Visualization-whitey-get-functions.gv  Neura NFT Visualization-whitey-write-functions.gv  Neura NFT Visualization-whitey.gv  deployment_framework.md  example.md  settingup_contract.md
smart_contracts/neuranft_contract/: Cargo.toml
smart_contracts/neuranft_contract/src/: lib.rs
smart_contracts/neuranft_contract/src/contracts/master_access/: contract.rs  events.rs  mod.rs
smart_contracts/neuranft_contract/src/contracts/nft_contract/: contract.rs
(+228 files in other folders)
