[package]
name = "neuranft"
description = "NeuraNFT contracts for managing and owning tech assets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.10.0-rust-1.81.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:5013a742e19a95c108bdfce085a57bda2f1047248e5eb9f005a8adc1ec8a1e42"
# build command inside of docker container 
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = { version = "5.4" }
near-contract-standards = { version = "5.0.0", features = ["abi"] }
borsh = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
near-sdk = { version = "5.5", features = ["unit-testing"] }
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-workspaces = { version = "0.14.0", features = ["unstable"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true



